# T_JSON

./: .gitattributes  .gitignore  CMakeLists.txt  agent.md  configmanager.h  devicecontroller.cpp  devicecontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.html  mapbridge.h  mapdialog.cpp  mapdialog.h  mapwidget.cpp  mapwidget.h  resources.qrc  rtspthread.cpp  settingsdialog.cpp  settingsdialog.ui  setup.iss  style.qss  tjsonclient.cpp  tjsonclient.h  videowidget.cpp  videowidget.h  指令.md  项目日志.md
docs/: rule.md  ui_rule.md  轨迹点抽稀算法.md  软件开发说明书.md  项目日志.md
resources/: app.rc  devices.json  leaflet.css  leaflet.js  leaflet.polylineDecorator.js  map.html  resources.qrc  style.qss  tilecache.js
src/: cmdlogdialog.cpp  cmdlogdialog.h  configmanager.cpp  configmanager.h  devicecontext.cpp  devicecontext.h  devicecontroller.cpp  devicecontroller.h  devicetreewidget.cpp  devicetreewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mapbridge.cpp  mapbridge.h  mapdialog.cpp  mapdialog.h  mapwidget.cpp  mapwidget.h  rtspthread.cpp  rtspthread.h  settingsdialog.cpp  settingsdialog.h  tjsonclient.cpp  tjsonclient.h  videogridwidget.cpp  videogridwidget.h  videowidget.cpp  videowidget.h
tests/: track_sim.py
ui/: mainwindow.ui  mapdialog.ui  mapwidget.ui  settingsdialog.ui
